@@ -5,3 +5,4 @@ setlocal & pushd
 set APP_ENTRY=org.tio.websocket.server.demo1.WsDemoStarter
 set BASE=%~dp0
 set CP=%BASE%\config;%BASE%\lib\*
+java -Xverify:none -XX:+HeapDumpOnOutOfMemoryError -Dtio.default.read.buffer.size=512 -XX:HeapDumpPath=c:/java-t-io-wsdemo-server-pid.hprof -cp "%CP%" %APP_ENTRY%
